VERSION 0.12 (2017-10-16)
  * RStudio basic integration implemented. Dependency to rstudioapi added.
  * sbox folder added beside deployment/libs for libraries installed by the user.
  * #147: Building package documentation for unpriviledged user fixed.

VERSION 0.11 (2017-10-12)
  * Handling of .libPath during project package build: it currently contains
     also user library path.
  * #140: Building package documentation then package has dependencies fixed.

VERSION 0.10 (2017-09-24)
  * Fixed handling of .libPath during prj_deps_inst and prj_build.
  * logging moved to Imports in RSuite and created projects.

VERSION 0.9 (2017-09-20)
  * Minor fixes related to installation of RSuite

VERSION 0.8 (2017-09-13)
  * Dependencies are checked both binary and source iteratively until they are
       all satisfied (deep dependency search).
  * Repository order is important: former repositories are checked for
       dependencies before later ones. If proper version is found latter
       repositories will not be checked to satisfy it.

VERSION 0.7 (2017-09-12)
  * Packages are not detached during build if they are loaded from another
       location then project environment
  * Repository manager is separated out of repository adapter.
  * Packages from github can be uploaded into a repository or packed into PKGZIP.
  * Setting RVersion for package added into API.
  * License changed to MIT + LICENSE
  * Listing and removing packges from repositories added.
  * It does not require optparse any more
  * While building pkg zip from external packages it can include binary versions
       build out of sources.
  * Installing binary packages from repository on linux fixed.

VERSION 0.6 (2017-08-10)
  * R version consistency check and enforcement on project level
  * Issues in upgrade of old deployment structure fixed

VERSION 0.5 (2017-07-22)
  * Added cleaninig non required packages from project local environment.
  * PKGZIP creation and upload implemented