@@ -99,7 +99,8 @@ export(rstudio_01_prj_start)
 export(rstudio_02_prj_start_package)
 export(rstudio_03_prj_install_deps)
 export(rstudio_04_prj_build)
-export(rstudio_05_prj_zip)
+export(rstudio_05_prj_clean_deps)
+export(rstudio_06_prj_zip)
 export(rsuite_check_version)
 export(rsuite_getLogger)
 export(rsuite_get_rc_adapter_names)
