@@ -2,6 +2,10 @@ VERSION 0.12 (2017-10-16)
   * RStudio basic integration implemented. Dependency to rstudioapi added.
   * sbox folder added beside deployment/libs for libraries installed by the user.
   * #147: Building package documentation for unpriviledged user fixed.
+  * #141: prj_zip does not require project to be under version control. Version
+     is detected out of PARAMETERS/ZipVersion and packages version if formet not
+     exists.
+  * #143: Clean dependencies RSuite addin added.
 
 VERSION 0.11 (2017-10-12)
   * Handling of .libPath during project package build: it currently contains
